--- a/bin/install
+++ b/bin/install
@@ -54,14 +54,14 @@ base::tmux() {
     local -r TMUX_TPM_GH_REPOSITORY=https://github.com/tmux-plugins/tpm
     local -r TMUX_TPM_PATH="$XDG_CONFIG_HOME/tmux/plugins/tpm"
 
-    [[ -d $TMUX_TPM_PATH ]] || git clone --depth 1 $TMUX_TPM_GH_REPOSITORY $TMUX_TPM_PATH &>/dev/null
+    [[ -d $TMUX_TPM_PATH ]] || git clone --depth 1 --quiet $TMUX_TPM_GH_REPOSITORY $TMUX_TPM_PATH
 
     local -r ENTR_LATEST_TAG=$(curl -s "https://api.github.com/repos/eradman/entr/tags" | jq -r '.[0].name')
     local -r ENTR_REPOSITORY_URL="https://github.com/eradman/entr.git"
     local -r ENTR_REPOSITORY_BASENAME=$(basename $ENTR_REPOSITORY_URL .git)
 
     [[ $(command -v entr) ]] || (
-        git clone --depth 1 --branch "$ENTR_LATEST_TAG" "$ENTR_REPOSITORY_URL" "$SANDBOX/$ENTR_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
+        git clone --depth 1 --quiet --branch "$ENTR_LATEST_TAG" "$ENTR_REPOSITORY_URL" "$SANDBOX/$ENTR_REPOSITORY_BASENAME" && cd $_ || {
             log::error "Couldn't clone repository: $ENTR_REPOSITORY_URL"
         }
         ./configure && PREFIX=$(dirname $XDG_BIN_HOME) make install &>/dev/null || {
@@ -216,7 +216,7 @@ base::neovim() {
     local -r COLORSCRIPT_REPOSITORY_BASENAME=$(basename $COLORSCRIPT_REPOSITORY_URL .git)
 
     [[ $(command -v colorscript) ]] || (
-        git clone "$COLORSCRIPT_REPOSITORY_URL" "$SANDBOX/$COLORSCRIPT_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
+        git clone --quiet "$COLORSCRIPT_REPOSITORY_URL" "$SANDBOX/$COLORSCRIPT_REPOSITORY_BASENAME" && cd $_ || {
             log::error "Couldn't clone repository $COLORSCRIPT_REPOSITORY_URL"
         }
         sudo make install
@@ -253,7 +253,7 @@ base::fonts() {
     done
 
     if [[ ! -d $POWERLINE_FONTS_DESTINATION ]]; then
-        git clone --depth 1 $POWERLINE_FONTS_REPOSITORY $SANDBOX/$POWERLINE_FONTS_DIRNAME &>/dev/null
+        git clone --depth 1 --quiet $POWERLINE_FONTS_REPOSITORY $SANDBOX/$POWERLINE_FONTS_DIRNAME
         sed -i "s|font_dir=\".*\"|font_dir=\"$POWERLINE_FONTS_DESTINATION\"|" "$SANDBOX/$POWERLINE_FONTS_DIRNAME/install.sh"
 
         $SANDBOX/$POWERLINE_FONTS_DIRNAME/install.sh &>/dev/null || {
@@ -285,7 +285,7 @@ base::alacritty() {
     sudo $PKG_MANAGER install -y $ALACRITTY_PACKAGES >/dev/null
 
     (
-        git clone --depth 1 $ALACRITTY_GH_REPOSITORY $ALACRITTY_DOWNLOAD_DIR && cd $_ || {
+        git clone --depth 1 --quiet $ALACRITTY_GH_REPOSITORY $ALACRITTY_DOWNLOAD_DIR && cd $_ || {
             log::error "Couldn't clone alacritty github repository: $ALACRITTY_GH_REPOSITORY"
         }
         curl -fsS https://sh.rustup.rs | sh && {
@@ -352,7 +352,7 @@ base::rofi() {
     local -r ROFI_THEMES_DESTINATION_DIRECTORY="$XDG_DATA_HOME/rofi/themes"
     local -r ROFI_THEMES_REPOSITORY_BASENAME=$(basename $ROFI_THEMES_REPOSITORY .git)
 
-    git clone --depth 1 "$ROFI_THEMES_REPOSITORY" "$SANDBOX/$ROFI_THEMES_REPOSITORY_BASENAME" &>/dev/null || {
+    git clone --depth 1 --quiet "$ROFI_THEMES_REPOSITORY" "$SANDBOX/$ROFI_THEMES_REPOSITORY_BASENAME" || {
         log::error "Couldn't clone Rofi themes repository: $ROFI_THEMES_REPOSITORY"
     }
 
@@ -544,7 +544,7 @@ base::i3lock() {
     sudo $PKG_MANAGER install -y $I3LOCK_COLOR_PACKAGES &>/dev/null
 
     (
-        git clone --depth 1 --branch "$I3LOCK_COLOR_LATEST_TAG" "$I3LOCK_COLOR_REPOSITORY_URL" "$SANDBOX/$I3LOCK_COLOR_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
+        git clone --depth 1 --quiet --branch "$I3LOCK_COLOR_LATEST_TAG" "$I3LOCK_COLOR_REPOSITORY_URL" "$SANDBOX/$I3LOCK_COLOR_REPOSITORY_BASENAME" && cd $_ || {
             log::error "Couldn't clone repository: $I3LOCK_COLOR_REPOSITORY_URL"
         }
         PREFIX=$(dirname $XDG_BIN_HOME) ./install-i3lock-color.sh &>/dev/null
@@ -567,7 +567,7 @@ cmd::terraform() {
         return 0
     }
 
-    git clone --depth 1 $TOFUENV_REPOSITORY $TOFUENV_INSTALL_DIR &>/dev/null
+    git clone --depth 1 --quiet $TOFUENV_REPOSITORY $TOFUENV_INSTALL_DIR
     ln -s $TOFUENV_INSTALL_DIR/bin/* $XDG_BIN_HOME
     tofuenv install < <(tofuenv list-remote | head -n1) &>/dev/null
 
