docs: Fix broken URLs and move unocss and catppuccin icons as regular dependencies

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -87,7 +87,7 @@ Open your terminal and run the following command once you have your monitors arr
 ## Further reading
 
 <CardGrid stagger>
-  <LinkCard title="Neovim keybindings" href="/keybindings/neovim" />
-  <LinkCard title="i3wm keybindings" href="/keybindings/i3" />
-  <LinkCard title="GNU Readline keybindings" href="/keybindings/readline" />
+  <LinkCard title="Neovim keybindings" href="/dotfiles/keybindings/neovim" />
+  <LinkCard title="i3wm keybindings" href="/dotfiles/keybindings/i3" />
+  <LinkCard title="GNU Readline keybindings" href="/dotfiles/keybindings/readline" />
 </CardGrid>
