docs: keybindings docs improvements

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -1,9 +1,6 @@
 ---
 title: Installation
 description: Installation Instructions
-tableOfContents:
-  minHeadingLevel: 2
-  maxHeadingLevel: 2
 ---
 
 import {
@@ -88,6 +85,7 @@ Open your terminal and run the following command once you have your monitors arr
 
 <CardGrid stagger>
   <LinkCard title="Neovim keybindings" href="/dotfiles/keybindings/neovim" />
+  <LinkCard title="Tmux keybindings" href="/dotfiles/keybindings/tmux" />
   <LinkCard title="i3wm keybindings" href="/dotfiles/keybindings/i3" />
   <LinkCard title="GNU Readline keybindings" href="/dotfiles/keybindings/readline" />
 </CardGrid>
