--- a/docs/src/content/docs/guides/overview.mdx
+++ b/docs/src/content/docs/guides/overview.mdx
@@ -6,19 +6,22 @@ description: Desktop Environment Overview
 The table below is a comprehensive list of the core components used by this desktop environment.
 
 <div class="overview-table">
-| Category | - |
-|----------|------|
-| **Shell** | bash |
-| **Prompt** | Starship |
-| **Editor** | Neovim |
-| **Terminal** | Alacritty |
-| **Multiplexer** | Tmux |
-| **Color Theme** | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
-| **Window Manager** | i3 |
-| **Compositor** | picom |
-| **Status Bar** | Bumblebee / Polybar |
-| **Application Launcher** | Rofi / Albert |
-| **File Manager** | Yazi |
-| **Notification Daemon** | Dunst |
-| **Version Manager** | mise |
+
+| Category                 | -                                                                   |
+| ------------------------ | ------------------------------------------------------------------- |
+| **Shell**                | bash                                                                |
+| **Prompt**               | Starship                                                            |
+| **Editor**               | Neovim                                                              |
+| **Font**                 | JetBrainsMono NL                                                   |
+| **Terminal**             | Alacritty                                                           |
+| **Multiplexer**          | Tmux                                                                |
+| **Color Theme**          | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
+| **Window Manager**       | i3                                                                  |
+| **Compositor**           | picom                                                               |
+| **Status Bar**           | Bumblebee / Polybar                                                 |
+| **Application Launcher** | Rofi / Albert                                                       |
+| **File Manager**         | Yazi                                                                |
+| **Notification Daemon**  | Dunst                                                               |
+| **Version Manager**      | mise                                                                |
+
 </div>
