--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -13,7 +13,7 @@ hero:
     light: ../../assets/logos/home/home-light.png
   actions:
     - text: Get started
-      link: guides/overview
+      link: /dotfiles/guides/overview
       icon: right-arrow
 ---
 
