--- a/docs/src/content/docs/keybindings/i3.mdx
+++ b/docs/src/content/docs/keybindings/i3.mdx
@@ -109,7 +109,7 @@ A comprehensive reference of all custom keybindings configured in i3wm.
 
 ### Resize Mode Bindings
 
-When in resize mode (`$mod+r`):
+While in resize mode `$mod+r`:
 
 | Key                 | Description      |
 | ------------------- | ---------------- |
