docs: minor installation.mdx docs improvements

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -32,13 +32,12 @@ you will need to provide your own preferences.
       lang="sh"
     />
     <Aside type="tip">
-      The standalone installer may be inspected before use:
+      The standalone installer may be inspected before use or alternatively
+      check out the source code directly on [GitHub](https://github.com/envyj020/dotfiles).
       <Code
         code="curl -sSfL https://envyj020.github.io/dotfiles/run | less"
         lang="sh"
       />
-      Alternatively, the installer or raw code can be reviewed directly on
-      [GitHub](https://github.com/envyj020/dotfiles).
     </Aside>
   </TabItem>
   <TabItem label="Manual Installation" icon="seti:powershell">
@@ -73,7 +72,7 @@ While a default wallpaper is provided, you can set your own by overriding the on
 
 ### 2. Configure your displays
 
-Open your terminal and run the following command once you have your monitors arranged how you like them:
+Open your terminal and run the following command once you have your monitors arranged the way you like them:
 
 <Code code="autorandr --save default" lang="sh" />
 <Aside title="autorandr">
