config:nvim: add vim-dadbod

--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -232,6 +232,12 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 | `<Leader>;` | Normal   | Toggle terminal    |
 | `<Esc>`     | Terminal | Exit terminal mode |
 
+## DBMS
+
+| Key           | Mode   | Description              |
+| ------------- | ------ | ------------------------ |
+| `<Leader>ddb` | Normal | Opens db ui in a new tab |
+
 ## Utilities
 
 | Key           | Mode   | Description     |
